# rag-core

./: .clang-format  .env  .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
bench/: CMakeLists.txt  bench_main.cpp  main.cpp
cmake/: crash.cmake  deploy.cmake  env.cmake  pack.cmake  triplet.cmake
doc/: about.txt
res/: core.db  core.ini  core.sql
res/Debug/: core.db  core.ini  core.sql
res/Release/: core.db  core.ini  core.sql
res/Release-Lite/: core.db  core.sql  license.lic
src/: account_mgr.cpp  account_mgr.h  api.grpc.pb.cc  api.grpc.pb.h  api.pb.cc  api.pb.h  api.proto  asr.cpp  asr.h  audio_buffer.cpp  audio_buffer.h  auth.cpp  auth.h  caller.cpp  caller.h  conf.cpp  conf.h  db_mgr.cpp  db_mgr.h  err.h  global.h  llm.cpp  llm.h  main.cpp  memory.cpp  memory.h  reactor_mgr.h  router.cpp  router.h  server.cpp  server.h  server_reactor.cpp  server_reactor.h  sqlite.cpp  sqlite.h  sync.h  updater.cpp  updater.h  util.h  watch_dog.cpp  (+1 more)
test/: CMakeLists.txt  test_main.cpp
